--- a/package.json
+++ b/package.json
@@ -8,13 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@heroicons/react": "^1.0.5",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.21",
     "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
