--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
-  "name": "nextjs-init",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
-    "@mui/icons-material": "^5.3.0",
-    "@mui/material": "^5.3.0",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.6"
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
+    "next": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.21",
     "autoprefixer": "^10.4.0",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
